# android_spatialite

./: .gitignore  build.gradle.kts  dirlisting.txt  jitpack.yml  settings.gradle.kts
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/geos/include/: Makefile  cmake_install.cmake  geos_c.h
app/src/main/jni/proj/include/proj/: Makefile  cmake_install.cmake
app/src/main/jni/src/: android_database_SQLiteCommon.cpp  android_database_SQLiteConnection.cpp  android_database_SQLiteDebug.cpp  android_database_SQLiteGlobal.cpp
static_libs/libspatialite-5.1.0/test/sql_stmt_geos3100_tests/: Makefile  Makefile.am  Makefile.in  constrdelaunay1.testcase  constrdelaunay2.testcase  constrdelaunay3.testcase  constrdelaunay4.testcase  constrdelaunay6.testcase  constrdelaunay7.testcase  constrdelaunay8.testcase  geosdensify1.testcase  geosdensify2.testcase  geosdensify3.testcase  geosdensify4.testcase  geosdensify5.testcase  geosdensify6.testcase  geosdensify7.testcase  geosemptycircle1.testcase  geosemptycircle10.testcase  geosemptycircle2.testcase  geosemptycircle3.testcase  geosemptycircle4.testcase  geosemptycircle5.testcase  geosemptycircle6.testcase  geosemptycircle7.testcase  geosemptycircle8.testcase  geosemptycircle9.testcase  geosmakevalid1.testcase  geosmakevalid10.testcase  geosmakevalid11.testcase  geosmakevalid12.testcase  geosmakevalid13.testcase  geosmakevalid14.testcase  geosmakevalid2.testcase  geosmakevalid3.testcase  geosmakevalid4.testcase  geosmakevalid5.testcase  geosmakevalid6.testcase  geosmakevalid7.testcase  geosmakevalid8.testcase  (+21 more)
static_libs/libspatialite-5.1.0/test/sql_stmt_geos3110_tests/: Makefile  Makefile.am  Makefile.in  concavehull1.testcase  concavehull10.testcase  concavehull11.testcase  concavehull12.testcase  concavehull13.testcase  concavehull14.testcase  concavehull15.testcase  concavehull2.testcase  concavehull3.testcase  concavehull4.testcase  concavehull5.testcase  concavehull6.testcase  concavehull7.testcase  concavehull8.testcase  concavehull9.testcase  hilbertcode1.testcase  hilbertcode10.testcase  hilbertcode11.testcase  hilbertcode12.testcase  hilbertcode13.testcase  hilbertcode14.testcase  hilbertcode15.testcase  hilbertcode2.testcase  hilbertcode3.testcase  hilbertcode4.testcase  hilbertcode5.testcase  hilbertcode6.testcase  hilbertcode7.testcase  hilbertcode8.testcase  hilbertcode9.testcase
static_libs/libspatialite-5.1.0/test/sql_stmt_geos370_tests/: Makefile  Makefile.am  Makefile.in  frechetdistance1.testcase  frechetdistance2.testcase  frechetdistance3.testcase  frechetdistance4.testcase  frechetdistance5.testcase  frechetdistance6.testcase  frechetdistance7.testcase  frechetdistdens1.testcase  frechetdistdens10.testcase  frechetdistdens2.testcase  frechetdistdens3.testcase  frechetdistdens4.testcase  frechetdistdens5.testcase  frechetdistdens6.testcase  frechetdistdens7.testcase  frechetdistdens8.testcase  frechetdistdens9.testcase  geosminboundcenter1.testcase  geosminboundcenter2.testcase  geosminboundcenter3.testcase  geosminboundcenter4.testcase  geosminboundcenter5.testcase  geosminboundcenter6.testcase  geosminboundcircle1.testcase  geosminboundcircle2.testcase  geosminboundcircle3.testcase  geosminboundcircle4.testcase  geosminboundcircle5.testcase  geosminboundcircle6.testcase  geosminboundradius1.testcase  geosminboundradius2.testcase  geosminboundradius3.testcase  geosminboundradius4.testcase  geosminboundradius5.testcase  geosminboundradius6.testcase  geosminclr1.testcase  geosminclr2.testcase  (+24 more)
static_libs/libspatialite-5.1.0/test/sql_stmt_libxml2_rttopo_tests/: Makefile  Makefile.am  Makefile.in
static_libs/libspatialite-5.1.0/test/sql_stmt_libxml2_tests/: Makefile  Makefile.am  Makefile.in  createisometa1.testcase  createisometa5.testcase  createisometa6.testcase  createstyling11.testcase  createstyling5.testcase  createstyling6.testcase  ismapconfig1.testcase  ismapconfig2.testcase  ismapconfig3.testcase  ismapconfig4.testcase  ismapconfig5.testcase  ismapconfig6.testcase  ismapconfig7.testcase  mapconfigabstract1.testcase  mapconfigabstract2.testcase  mapconfigabstract3.testcase  mapconfigabstract4.testcase  mapconfigabstract5.testcase  mapconfigname1.testcase  mapconfigname2.testcase  mapconfigname3.testcase  mapconfigname4.testcase  mapconfigname5.testcase  mapconfigtitle1.testcase  mapconfigtitle2.testcase  mapconfigtitle3.testcase  mapconfigtitle4.testcase  mapconfigtitle5.testcase  nummapconfig1.testcase  recreateisometarefs1.testcase  recreateisometarefs2.testcase  recreateisometarefs3.testcase  recreateisometarefs4.testcase  recreateisometarefs5.testcase  registerGraphic22.testcase  registerGraphic9.testcase  registerMapConfig1.testcase  (+45 more)
static_libs/libspatialite-5.1.0/test/sql_stmt_minizip/: Makefile  Makefile.am  Makefile.in  importzipdbf1.testcase  importzipdbf10.testcase  importzipdbf11.testcase  importzipdbf12.testcase  importzipdbf13.testcase  importzipdbf14.testcase  importzipdbf15.testcase  importzipdbf2.testcase  importzipdbf3.testcase  importzipdbf4.testcase  importzipdbf5.testcase  importzipdbf6.testcase  importzipdbf7.testcase  importzipdbf8.testcase  importzipdbf9.testcase  importzipshp1.testcase  importzipshp10.testcase  importzipshp11.testcase  importzipshp12.testcase  importzipshp13.testcase  importzipshp14.testcase  importzipshp15.testcase  importzipshp16.testcase  importzipshp17.testcase  importzipshp18.testcase  importzipshp19.testcase  importzipshp2.testcase  importzipshp20.testcase  importzipshp21.testcase  importzipshp22.testcase  importzipshp23.testcase  importzipshp24.testcase  importzipshp25.testcase  importzipshp26.testcase  importzipshp3.testcase  importzipshp4.testcase  importzipshp5.testcase  (+37 more)
static_libs/libspatialite-5.1.0/test/sql_stmt_zip_proj6/: Makefile  Makefile.am  Makefile.in  zipguessshp1.testcase  zipguessshp10.testcase  zipguessshp11.testcase  zipguessshp12.testcase  zipguessshp2.testcase  zipguessshp3.testcase  zipguessshp4.testcase  zipguessshp5.testcase  zipguessshp6.testcase  zipguessshp7.testcase  zipguessshp8.testcase  zipguessshp9.testcase
(+4134 files in other folders)
