EXTRA_DIST = geosdensify1.testcase \
	geosdensify2.testcase \
	geosdensify3.testcase \
	geosdensify4.testcase \
	geosdensify5.testcase \
	geosdensify6.testcase \
	geosdensify7.testcase \
	geosdensify7.testcase \
	geosdensify7.testcase \
	geosdensify7.testcase \
	geosdensify7.testcase \
	geosemptycircle1.testcase \
	geosemptycircle2.testcase \
	geosemptycircle3.testcase \
	geosemptycircle4.testcase \
	geosemptycircle5.testcase \
	geosemptycircle6.testcase \
	geosemptycircle7.testcase \
	geosemptycircle8.testcase \
	geosemptycircle9.testcase \
	geosemptycircle10.testcase \
	geosmakevalid1.testcase \
	geosmakevalid2.testcase \
	geosmakevalid3.testcase \
	geosmakevalid4.testcase \
	geosmakevalid5.testcase \
	geosmakevalid6.testcase \
	geosmakevalid7.testcase \
	geosmakevalid8.testcase \
	geosmakevalid9.testcase \
	geosmakevalid10.testcase \
	geosmakevalid11.testcase \
	geosmakevalid12.testcase \
	geosmakevalid13.testcase \
	geosmakevalid14.testcase \
	geosmaxcircle1.testcase \
	geosmaxcircle2.testcase \
	geosmaxcircle3.testcase \
	geosmaxcircle4.testcase \
	geosmaxcircle5.testcase \
	geosmaxcircle6.testcase \
	geosmaxcircle7.testcase \
	geosmaxcircle8.testcase \
	geosmaxcircle9.testcase \
	geosmaxcircle10.testcase \
	constrdelaunay1.testcase \
	constrdelaunay2.testcase \
	constrdelaunay3.testcase \
	constrdelaunay4.testcase \
	constrdelaunay6.testcase \
	constrdelaunay7.testcase \
	constrdelaunay8.testcase \
	reduce_precision1.testcase \
	reduce_precision2.testcase \
	reduce_precision3.testcase \
	reduce_precision4.testcase \
	reduce_precision5.testcase \
	reduce_precision6.testcase \
	reduce_precision7.testcase \
	reduce_precision8.testcase \
	reduce_precision9.testcase \
	reduce_precision10.testcase 
