
EXTRA_DIST = frechetdistance1.testcase \
	frechetdistance2.testcase \
	frechetdistance3.testcase \
	frechetdistance4.testcase \
	frechetdistance5.testcase \
	frechetdistance6.testcase \
	frechetdistance7.testcase \
	frechetdistdens10.testcase \
	frechetdistdens1.testcase \
	frechetdistdens2.testcase \
	frechetdistdens3.testcase \
	frechetdistdens4.testcase \
	frechetdistdens5.testcase \
	frechetdistdens6.testcase \
	frechetdistdens7.testcase \
	frechetdistdens8.testcase \
	frechetdistdens9.testcase \
	frechetdistdens10.testcase \
	frechetdistdens1.testcase \
	frechetdistdens2.testcase \
	frechetdistdens3.testcase \
	frechetdistdens4.testcase \
	frechetdistdens5.testcase \
	frechetdistdens6.testcase \
	frechetdistdens7.testcase \
	frechetdistdens8.testcase \
	frechetdistdens9.testcase \
	geosminboundcenter1.testcase \
	geosminboundcenter2.testcase \
	geosminboundcenter3.testcase \
	geosminboundcenter4.testcase \
	geosminboundcenter5.testcase \
	geosminboundcenter6.testcase \
	geosminboundcircle1.testcase \
	geosminboundcircle2.testcase \
	geosminboundcircle3.testcase \
	geosminboundcircle4.testcase \
	geosminboundcircle5.testcase \
	geosminboundcircle6.testcase \
	geosminboundradius1.testcase \
	geosminboundradius2.testcase \
	geosminboundradius3.testcase \
	geosminboundradius4.testcase \
	geosminboundradius5.testcase \
	geosminboundradius6.testcase \
	geosminclr1.testcase \
	geosminclr2.testcase \
	geosminclr3.testcase \
	geosminclr4.testcase \
	geosminclr5.testcase \
	geosminclr6.testcase \
	geosminclr7.testcase \
	geosminclrline1.testcase \
	geosminclrline2.testcase \
	geosminclrline3.testcase \
	geosminclrline4.testcase \
	geosminclrline5.testcase \
	geosminclrline6.testcase \
	geosminclrline7.testcase \
	geosminwidth1.testcase \
	geosminwidth2.testcase \
	geosminwidth3.testcase \
	geosminwidth4.testcase \
	geosminwidth5.testcase \
	geosminwidth6.testcase \
	geosminrotrect1.testcase \
	geosminrotrect2.testcase \
	geosminrotrect3.testcase \
	geosminrotrect4.testcase \
	geosminrotrect5.testcase \
	geosminrotrect6.testcase
