
EXTRA_DIST = 
	createmissingtables1.testcase \
	createmissingtables2.testcase \
	createmissingtables3.testcase \
	createmissingtables4.testcase \
	createmissingtables5.testcase \
	createmissingtables6.testcase \
	createmissingtables7.testcase \
	createmissingtables8.testcase \
	createmissingtables9.testcase \
	createmissingtables10.testcase
