
EXTRA_DIST = addfileid1.testcase \
	addfileid2.testcase \
	addfileid3.testcase \
	addfileid4.testcase \
	addfileid5.testcase \
	addfileid6.testcase \
	addfileid7.testcase \
	addparentid1.testcase \
	addparentid2.testcase \
	addparentid3.testcase \
	addparentid4.testcase \
	addparentid5.testcase \
	addparentid6.testcase \
	addparentid7.testcase \
	createisometa1.testcase \
	createisometa2.testcase \
	createisometa3.testcase \
	createisometa4.testcase \
	createisometa5.testcase \
	createisometa6.testcase \
	createstyling1.testcase \
	createstyling2.testcase \
	createstyling3.testcase \
	createstyling4.testcase \
	createstyling5.testcase \
	createstyling6.testcase \
	createstyling7.testcase \
	createstyling8.testcase \
	createstyling9.testcase \
	createstyling10.testcase \
	createstyling11.testcase \
	getIsoMetaId1.testcase \
	getIsoMetaId2.testcase \
	getIsoMetaId3.testcase \
	getIsoMetaId4.testcase \
	getIsoMetaId5.testcase \
	iscompressedxmlblob1.testcase \
	iscompressedxmlblob2.testcase \
	iscompressedxmlblob3.testcase \
	iscompressedxmlblob4.testcase \
	iscompressedxmlblob5.testcase \
	iscompressedxmlblob6.testcase \
	iscompressedxmlblob7.testcase \
	isisometadata1.testcase \
	isisometadata2.testcase \
	isisometadata3.testcase \
	isisometadata4.testcase \
	isisometadata5.testcase \
	isisometadata6.testcase \
	isisometadata7.testcase \
	ismapconfig1.testcase \
	ismapconfig2.testcase \
	ismapconfig3.testcase \
	ismapconfig4.testcase \
	ismapconfig5.testcase \
	ismapconfig6.testcase \
	ismapconfig7.testcase \
	isschemavalidatedxmlblob1.testcase \
	isschemavalidatedxmlblob2.testcase \
	isschemavalidatedxmlblob3.testcase \
	isschemavalidatedxmlblob4.testcase \
	isschemavalidatedxmlblob5.testcase \
	isschemavalidatedxmlblob6.testcase \
	issldserststyle1.testcase \
	issldserststyle2.testcase \
	issldserststyle3.testcase \
	issldserststyle4.testcase \
	issldserststyle5.testcase \
	issldserststyle6.testcase \
	issldserststyle7.testcase \
	issldsestyle1.testcase \
	issldsestyle2.testcase \
	issldsestyle3.testcase \
	issldsestyle4.testcase \
	issldsestyle5.testcase \
	issldsestyle6.testcase \
	issldsestyle7.testcase \
	isgpx1.testcase \
	isgpx2.testcase \
	isgpx3.testcase \
	isgpx4.testcase \
	isgpx5.testcase \
	isgpx6.testcase \
	isgpx7.testcase \
	issvg1.testcase \
	issvg2.testcase \
	issvg3.testcase \
	issvg4.testcase \
	issvg5.testcase \
	issvg6.testcase \
	issvg7.testcase \
	isvalidxmlblob1.testcase \
	isvalidxmlblob2.testcase \
	isvalidxmlblob3.testcase \
	isvalidxmlblob4.testcase \
	isvalidxmlblob5.testcase \
	isvalidxmlblob6.testcase \
	mapconfigabstract1.testcase \
	mapconfigabstract2.testcase \
	mapconfigabstract3.testcase \
	mapconfigabstract4.testcase \
	mapconfigabstract5.testcase \
	mapconfigname1.testcase \
	mapconfigname2.testcase \
	mapconfigname3.testcase \
	mapconfigname4.testcase \
	mapconfigname5.testcase \
	mapconfigtitle1.testcase \
	mapconfigtitle2.testcase \
	mapconfigtitle3.testcase \
	mapconfigtitle4.testcase \
	mapconfigtitle5.testcase \
	nummapconfig1.testcase \
	recreatestyling1.testcase \
	recreatestyling2.testcase \
	recreatestyling3.testcase \
	recreatestyling4.testcase \
	recreatestyling5.testcase \
	recreatestyling6.testcase \
	recreatestyling7.testcase \
	recreatestyling8.testcase \
	recreatestyling9.testcase \
	recreatestyling10.testcase \
	recreatestyling11.testcase \
	recreateisometarefs1.testcase \
	recreateisometarefs2.testcase \
	recreateisometarefs3.testcase \
	recreateisometarefs4.testcase \
	recreateisometarefs5.testcase \
	registerGraphic10.testcase \
	registerGraphic11.testcase \
	registerGraphic12.testcase \
	registerGraphic13.testcase \
	registerGraphic14.testcase \
	registerGraphic15.testcase \
	registerGraphic16.testcase \
	registerGraphic17.testcase \
	registerGraphic18.testcase \
	registerGraphic19.testcase \
	registerGraphic1.testcase \
	registerGraphic20.testcase \
	registerGraphic21.testcase \
	registerGraphic22.testcase \
	registerGraphic2.testcase \
	registerGraphic3.testcase \
	registerGraphic4.testcase \
	registerGraphic5.testcase \
	registerGraphic6.testcase \
	registerGraphic7.testcase \
	registerGraphic8.testcase \
	registerGraphic9.testcase \
	registerIsoMeta10.testcase \
	registerIsoMeta11.testcase \
	registerIsoMeta12.testcase \
	registerIsoMeta13.testcase \
	registerIsoMeta14.testcase \
	registerIsoMeta1.testcase \
	registerIsoMeta2.testcase \
	registerIsoMeta3.testcase \
	registerIsoMeta4.testcase \
	registerIsoMeta5.testcase \
	registerIsoMeta6.testcase \
	registerIsoMeta7.testcase \
	registerIsoMeta8.testcase \
	registerIsoMeta9.testcase \
	registerMapConfig1.testcase \
	registerMapConfig2.testcase \
	registerMapConfig3.testcase \
	registerMapConfig4.testcase \
	registerMapConfig5.testcase \
	registerRaster1.testcase \
	registerRaster2.testcase \
	registerRaster3.testcase \
	registerRaster4.testcase \
	registerRaster5.testcase \
	registerRaster6.testcase \
	registerRaster7.testcase \
	registerRaster8.testcase \
	registerRaster9.testcase \
	registerrasterkeyword1.testcase \
	registerrasterkeyword2.testcase \
	registerrasterkeyword3.testcase \
	registerrasterkeyword4.testcase \
	registerrasterkeyword5.testcase \
	registerrasterkeyword6.testcase \
	registerrasterkeyword7.testcase \
	registerrasterkeyword8.testcase \
	registerrasterkeyword9.testcase \
	registerrastersrid1.testcase \
	registerrastersrid2.testcase \
	registerrastersrid3.testcase \
	registerrastersrid4.testcase \
	registerrastersrid5.testcase \
	registerrastersrid6.testcase \
	registerrastersrid7.testcase \
	registerrastersrid8.testcase \
	registerrastersrid9.testcase \
	registerRasterStyle1.testcase \
	registerRasterStyle2.testcase \
	registerRasterStyle3.testcase \
	registerRasterStyle4.testcase \
	registerRasterStyle5.testcase \
	registerVector1.testcase \
	registerVector10.testcase \
	registerVector11.testcase \
	registerVector12.testcase \
	registerVector13.testcase \
	registerVector2.testcase \
	registerVector3.testcase \
	registerVector4.testcase \
	registerVector9.testcase \
	registertopogeocvg1.testcase \
	registertopogeocvg2.testcase \
	registertopogeocvg3.testcase \
	registertopogeocvg4.testcase \
	registertopogeocvg5.testcase \
	registertopogeocvg6.testcase \
	registertopogeocvg7.testcase \
	registertopogeocvg8.testcase \
	registertopogeocvg9.testcase \
	registertopogeocvg10.testcase \
	registertopogeocvg11.testcase \
	registertopogeocvg12.testcase \
	registertopogeocvg13.testcase \
	registertopogeocvg14.testcase \
	registertopogeocvg15.testcase \
	registertopogeocvg16.testcase \
	registertopogeocvg17.testcase \
	registertopogeocvg18.testcase \
	registertopogeocvg19.testcase \
	registertopogeocvg20.testcase \
	registertopogeocvg21.testcase \
	registertopogeocvg22.testcase \
	registertopogeocvg23.testcase \
	registertopogeocvg24.testcase \
	registertopogeocvg25.testcase \
	registertopogeocvg26.testcase \
	registertopogeocvg27.testcase \
	registertoponetcvg1.testcase \
	registertoponetcvg2.testcase \
	registertoponetcvg3.testcase \
	registertoponetcvg4.testcase \
	registertoponetcvg5.testcase \
	registertoponetcvg6.testcase \
	registertoponetcvg7.testcase \
	registertoponetcvg8.testcase \
	registertoponetcvg9.testcase \
	registertoponetcvg10.testcase \
	registertoponetcvg11.testcase \
	registertoponetcvg12.testcase \
	registertoponetcvg13.testcase \
	registertoponetcvg14.testcase \
	registertoponetcvg15.testcase \
	registertoponetcvg16.testcase \
	registertoponetcvg17.testcase \
	registertoponetcvg18.testcase \
	registertoponetcvg19.testcase \
	registertoponetcvg20.testcase \
	registertoponetcvg21.testcase \
	registertoponetcvg22.testcase \
	registertoponetcvg23.testcase \
	registertoponetcvg24.testcase \
	registertoponetcvg25.testcase \
	registertoponetcvg26.testcase \
	registertoponetcvg27.testcase \
	registervectorcvg1.testcase \
	registervectorcvg2.testcase \
	registervectorcvg3.testcase \
	registervectorcvg4.testcase \
	registervectorcvg5.testcase \
	registervectorcvg6.testcase \
	registervectorcvg7.testcase \
	registervectorcvg8.testcase \
	registervectorcvg9.testcase \
	registervectorcvg10.testcase \
	registervectorcvg11.testcase \
	registervectorcvg12.testcase \
	registervectorcvg13.testcase \
	registervectorcvg14.testcase \
	registervectorcvg15.testcase \
	registervectorcvg16.testcase \
	registervectorcvg17.testcase \
	registervectorcvg18.testcase \
	registervectorcvg19.testcase \
	registervectorcvg20.testcase \
	registervectorcvg21.testcase \
	registervectorcvg22.testcase \
	registervectorcvg23.testcase \
	registervectorcvg24.testcase \
	registervectorcvg25.testcase \
	registervectorcvg26.testcase \
	registervectorcvg27.testcase \
	registervectorcvg28.testcase \
	registervectorcvg29.testcase \
	registervectorcvg30.testcase \
	registervectorcvg31.testcase \
	registerviewcvg1.testcase \
	registerviewcvg2.testcase \
	registerviewcvg3.testcase \
	registerviewcvg4.testcase \
	registerviewcvg5.testcase \
	registerviewcvg6.testcase \
	registerviewcvg7.testcase \
	registerviewcvg8.testcase \
	registerviewcvg9.testcase \
	registerviewcvg10.testcase \
	registerviewcvg11.testcase \
	registerviewcvg12.testcase \
	registerviewcvg13.testcase \
	registerviewcvg14.testcase \
	registerviewcvg15.testcase \
	registerviewcvg16.testcase \
	registerviewcvg17.testcase \
	registerviewcvg18.testcase \
	registerviewcvg19.testcase \
	registerviewcvg20.testcase \
	registerviewcvg21.testcase \
	registerviewcvg22.testcase \
	registerviewcvg23.testcase \
	registerviewcvg24.testcase \
	registerviewcvg25.testcase \
	registerviewcvg26.testcase \
	registerviewcvg27.testcase \
	registerviewcvg28.testcase \
	registerviewcvg29.testcase \
	registerviewcvg30.testcase \
	registerviewcvg31.testcase \
	registervirtualcvg1.testcase \
	registervirtualcvg2.testcase \
	registervirtualcvg3.testcase \
	registervirtualcvg4.testcase \
	registervirtualcvg5.testcase \
	registervirtualcvg6.testcase \
	registervirtualcvg7.testcase \
	registervirtualcvg8.testcase \
	registervirtualcvg9.testcase \
	registervirtualcvg10.testcase \
	registervirtualcvg11.testcase \
	registervirtualcvg12.testcase \
	registervirtualcvg13.testcase \
	registervirtualcvg14.testcase \
	registervirtualcvg15.testcase \
	registervirtualcvg16.testcase \
	registervirtualcvg17.testcase \
	registervirtualcvg18.testcase \
	registervirtualcvg19.testcase \
	registervirtualcvg20.testcase \
	registervirtualcvg21.testcase \
	registervirtualcvg22.testcase \
	registervirtualcvg23.testcase \
	registervirtualcvg24.testcase \
	registervirtualcvg25.testcase \
	registervirtualcvg26.testcase \
	registervirtualcvg27.testcase \
	registervectorkeyword1.testcase \
	registervectorkeyword2.testcase \
	registervectorkeyword3.testcase \
	registervectorkeyword4.testcase \
	registervectorkeyword5.testcase \
	registervectorkeyword6.testcase \
	registervectorkeyword7.testcase \
	registervectorkeyword8.testcase \
	registervectorkeyword9.testcase \
	registervectorsrid1.testcase \
	registervectorsrid2.testcase \
	registervectorsrid3.testcase \
	registervectorsrid4.testcase \
	registervectorsrid5.testcase \
	registervectorsrid6.testcase \
	registervectorsrid7.testcase \
	registervectorsrid8.testcase \
	registervectorsrid9.testcase \
	registerVectorStyle1.testcase \
	registerVectorStyle2.testcase \
	registerVectorStyle3.testcase \
	registerVectorStyle4.testcase \
	registerVectorStyle5.testcase \
	reloadMapConfig1.testcase \
	reloadMapConfig2.testcase \
	reloadMapConfig3.testcase \
	reloadMapConfig5.testcase \
	reloadMapConfig6.testcase \
	reloadMapConfig7.testcase \
	reloadMapConfig8.testcase \
	reloadMapConfig9.testcase \
	reloadMapConfig10.testcase \
	reloadRasterStyle1.testcase \
	reloadRasterStyle2.testcase \
	reloadRasterStyle3.testcase \
	reloadRasterStyle5.testcase \
	reloadRasterStyle6.testcase \
	reloadRasterStyle7.testcase \
	reloadRasterStyle8.testcase \
	reloadRasterStyle9.testcase \
	reloadRasterStyle10.testcase \
	reloadVectorStyle1.testcase \
	reloadVectorStyle2.testcase \
	reloadVectorStyle3.testcase \
	reloadVectorStyle5.testcase \
	reloadVectorStyle6.testcase \
	reloadVectorStyle7.testcase \
	reloadVectorStyle8.testcase \
	reloadVectorStyle9.testcase \
	reloadVectorStyle10.testcase \
	setfileid1.testcase \
	setfileid2.testcase \
	setfileid3.testcase \
	setfileid4.testcase \
	setfileid5.testcase \
	setparentid1.testcase \
	setparentid2.testcase \
	setparentid3.testcase \
	setparentid4.testcase \
	setparentid5.testcase \
	setvectorcopyright1.testcase \
	setvectorcopyright2.testcase \
	setvectorcopyright3.testcase \
	setvectorcopyright4.testcase \
	setvectorcopyright5.testcase \
	setvectorcopyright6.testcase \
	setvectorcopyright7.testcase \
	setvectorcopyright8.testcase \
	setvectorcopyright9.testcase \
	setvectorcopyright10.testcase \
	setvectorcopyright11.testcase \
	setvectorcopyright12.testcase \
	setvectorcopyright13.testcase \
	setvectorcopyright14.testcase \
	setvectorcopyright15.testcase \
	setvectorcopyright16.testcase \
	setvectorinfos1.testcase \
	setvectorinfos2.testcase \
	setvectorinfos3.testcase \
	setvectorinfos4.testcase \
	setvectorinfos5.testcase \
	setvectorinfos6.testcase \
	setvectorinfos7.testcase \
	setvectorinfos8.testcase \
	setvectorinfos9.testcase \
	setvectorinfos10.testcase \
	setvectorinfos11.testcase \
	setvectorinfos12.testcase \
	setvectorinfos13.testcase \
	setvectorinfos14.testcase \
	setvectorinfos15.testcase \
	setvectorinfos16.testcase \
	setvectorinfos17.testcase \
	setvectorinfos18.testcase \
	setvectorinfos19.testcase \
	setvectorinfos20.testcase \
	setvectorinfos21.testcase \
	setvectorinfos22.testcase \
	setvectorvisrange1.testcase \
	setvectorvisrange2.testcase \
	setvectorvisrange3.testcase \
	setvectorvisrange4.testcase \
	setvectorvisrange5.testcase \
	setvectorvisrange6.testcase \
	setvectorvisrange7.testcase \
	setvectorvisrange8.testcase \
	setvectorvisrange9.testcase \
	setvectorvisrange10.testcase \
	unregisterGraphic1.testcase \
	unregisterGraphic2.testcase \
	unregisterGraphic3.testcase \
	unregisterGraphic4.testcase \
	unregisterGraphic5.testcase \
	unregisterMapConfig1.testcase \
	unregisterMapConfig2.testcase \
	unregisterMapConfig3.testcase \
	unregisterMapConfig4.testcase \
	unregisterMapConfig5.testcase \
	unregisterRaster1.testcase \
	unregisterRaster2.testcase \
	unregisterRaster3.testcase \
	unregisterRaster4.testcase \
	unregisterRaster5.testcase \
	unregisterRaster6.testcase \
	unregisterRaster7.testcase \
	unregisterRaster8.testcase \
	unregisterRaster9.testcase \
	unregisterrasterkeyword1.testcase \
	unregisterrasterkeyword2.testcase \
	unregisterrasterkeyword3.testcase \
	unregisterrasterkeyword4.testcase \
	unregisterrasterkeyword5.testcase \
	unregisterrasterkeyword6.testcase \
	unregisterrasterkeyword7.testcase \
	unregisterrasterkeyword8.testcase \
	unregisterrasterkeyword9.testcase \
	unregisterrastersrid1.testcase \
	unregisterrastersrid2.testcase \
	unregisterrastersrid3.testcase \
	unregisterrastersrid4.testcase \
	unregisterrastersrid5.testcase \
	unregisterrastersrid6.testcase \
	unregisterrastersrid7.testcase \
	unregisterrastersrid8.testcase \
	unregisterrastersrid9.testcase \
	unregisterRasterStyle1.testcase \
	unregisterRasterStyle2.testcase \
	unregisterRasterStyle3.testcase \
	unregisterRasterStyle4.testcase \
	unregisterRasterStyle5.testcase \
	unregisterRasterStyle6.testcase \
	unregisterRasterStyle7.testcase \
	unregisterRasterStyle8.testcase \
	unregisterRasterStyle9.testcase \
	unregisterRasterStyle10.testcase \
	unregisterVector1.testcase \
	unregisterVector2.testcase \
	unregisterVector3.testcase \
	unregisterVector4.testcase \
	unregisterVector9.testcase \
	unregisterVector10.testcase \
	unregisterVector11.testcase \
	unregisterVector12.testcase \
	unregisterVector13.testcase \
	unregistervectorcvg1.testcase \
	unregistervectorcvg2.testcase \
	unregistervectorcvg3.testcase \
	unregistervectorcvg4.testcase \
	unregistervectorcvg5.testcase \
	unregistervectorkeyword1.testcase \
	unregistervectorkeyword2.testcase \
	unregistervectorkeyword3.testcase \
	unregistervectorkeyword4.testcase \
	unregistervectorkeyword5.testcase \
	unregistervectorkeyword6.testcase \
	unregistervectorkeyword7.testcase \
	unregistervectorkeyword8.testcase \
	unregistervectorkeyword9.testcase \
	unregistervectorsrid1.testcase \
	unregistervectorsrid2.testcase \
	unregistervectorsrid3.testcase \
	unregistervectorsrid4.testcase \
	unregistervectorsrid5.testcase \
	unregistervectorsrid6.testcase \
	unregistervectorsrid7.testcase \
	unregistervectorsrid8.testcase \
	unregistervectorsrid9.testcase \
	unregisterVectorStyle1.testcase \
	unregisterVectorStyle2.testcase \
	unregisterVectorStyle3.testcase \
	unregisterVectorStyle4.testcase \
	unregisterVectorStyle5.testcase \
	unregisterVectorStyle6.testcase \
	unregisterVectorStyle7.testcase \
	unregisterVectorStyle8.testcase \
	unregisterVectorStyle9.testcase \
	unregisterVectorStyle10.testcase \
	updaterasterextent1.testcase \
	updaterasterextent2.testcase \
	updaterasterextent3.testcase \
	updaterasterextent4.testcase \
	updaterasterextent5.testcase \
	updaterasterextent6.testcase \
	updaterasterextent7.testcase \
	updaterasterextent8.testcase \
	updaterasterextent9.testcase \
	updaterasterextent10.testcase \
	updaterasterextent11.testcase \
	updaterasterextent12.testcase \
	updaterasterextent13.testcase \
	updaterasterextent14.testcase \
	updaterasterextent15.testcase \
	updatevectorextent1.testcase \
	updatevectorextent2.testcase \
	updatevectorextent3.testcase \
	updatevectorextent4.testcase \
	updatevectorextent5.testcase \
	updatevectorextent6.testcase \
	updatevectorextent7.testcase \
	updatevectorextent8.testcase \
	updatevectorextent9.testcase \
	updatevectorextent10.testcase \
	updatevectorextent11.testcase \
	updatevectorextent12.testcase \
	updatevectorextent13.testcase \
	updatevectorextent14.testcase \
	updatevectorextent15.testcase \
	xmlblobgetabstract1.testcase \
	xmlblobgetabstract2.testcase \
	xmlblobgetabstract3.testcase \
	xmlblobgetabstract4.testcase \
	xmlblobgetabstract5.testcase \
	xmlblobgetabstract6.testcase \
	xmlblobgetdocumentsize1.testcase \
	xmlblobgetdocumentsize2.testcase \
	xmlblobgetdocumentsize3.testcase \
	xmlblobgetdocumentsize4.testcase \
	xmlblobgetdocumentsize5.testcase \
	xmlblobgetdocumentsize6.testcase \
	xmlblobgetencoding1.testcase \
	xmlblobgetencoding2.testcase \
	xmlblobgetencoding3.testcase \
	xmlblobgetencoding4.testcase \
	xmlblobgetencoding5.testcase \
	xmlblobgetencoding6.testcase \
	xmlblobgetencoding7.testcase \
	xmlblobgetfileid1.testcase \
	xmlblobgetfileid2.testcase \
	xmlblobgetfileid3.testcase \
	xmlblobgetfileid4.testcase \
	xmlblobgetfileid5.testcase \
	xmlblobgetfileid6.testcase \
	xmlblobgetgeometry1.testcase \
	xmlblobgetgeometry2.testcase \
	xmlblobgetgeometry3.testcase \
	xmlblobgetgeometry4.testcase \
	xmlblobgetgeometry5.testcase \
	xmlblobgetgeometry6.testcase \
	xmlblobgetinternalschemauri1.testcase \
	xmlblobgetinternalschemauri2.testcase \
	xmlblobgetinternalschemauri3.testcase \
	xmlblobgetinternalschemauri4.testcase \
	xmlblobgetinternalschemauri5.testcase \
	xmlblobgetparentid1.testcase \
	xmlblobgetparentid2.testcase \
	xmlblobgetparentid3.testcase \
	xmlblobgetparentid4.testcase \
	xmlblobgetparentid5.testcase \
	xmlblobgetparentid6.testcase \
	xmlblobgetschemauri1.testcase \
	xmlblobgetschemauri2.testcase \
	xmlblobgetschemauri3.testcase \
	xmlblobgetschemauri4.testcase \
	xmlblobgetschemauri5.testcase \
	xmlblobgetschemauri6.testcase \
	xmlblobgetname1.testcase \
	xmlblobgetname2.testcase \
	xmlblobgetname3.testcase \
	xmlblobgetname4.testcase \
	xmlblobgetname5.testcase \
	xmlblobgetname6.testcase \
	xmlblobgetname7.testcase \
	xmlblobgetname8.testcase \
	xmlblobgettitle1.testcase \
	xmlblobgettitle2.testcase \
	xmlblobgettitle3.testcase \
	xmlblobgettitle4.testcase \
	xmlblobgettitle5.testcase \
	xmlblobgettitle6.testcase \
	xmlblobmlinegpx1.testcase \
	xmlblobmlinegpx2.testcase \
	xmlblobmlinegpx3.testcase \
	xmlblobmlinegpx4.testcase \
	xmlblobmlinegpx5.testcase \
	xmlblobmlinegpx6.testcase \
	xmlcompress1.testcase \
	xmlcompress2.testcase \
	xmlcompress3.testcase \
	xmlcompress4.testcase \
	xmlcompress5.testcase \
	xmlcompress6.testcase \
	xmlcompress7.testcase \
	xmlcompress8.testcase \
	xmlfromblob10.testcase \
	xmlfromblob11.testcase \
	xmlfromblob12.testcase \
	xmlfromblob13.testcase \
	xmlfromblob1.testcase \
	xmlfromblob2.testcase \
	xmlfromblob3.testcase \
	xmlfromblob4.testcase \
	xmlfromblob5.testcase \
	xmlfromblob6.testcase \
	xmlfromblob7.testcase \
	xmlfromblob8.testcase \
	xmlfromblob9.testcase \
	xmltextfromblob10.testcase \
	xmltextfromblob11.testcase \
	xmltextfromblob12.testcase \
	xmltextfromblob13.testcase \
	xmltextfromblob1.testcase \
	xmltextfromblob2.testcase \
	xmltextfromblob3.testcase \
	xmltextfromblob4.testcase \
	xmltextfromblob5.testcase \
	xmltextfromblob6.testcase \
	xmltextfromblob7.testcase \
	xmltextfromblob8.testcase \
	xmltextfromblob9.testcase \
	xmltoblob10.testcase \
	xmltoblob11.testcase \
	xmltoblob12.testcase \
	xmltoblob13.testcase \
	xmltoblob14.testcase \
	xmltoblob15.testcase \
	xmltoblob16.testcase \
	xmltoblob17.testcase \
	xmltoblob18.testcase \
	xmltoblob1.testcase \
	xmltoblob2.testcase \
	xmltoblob3.testcase \
	xmltoblob4.testcase \
	xmltoblob5.testcase \
	xmltoblob6.testcase \
	xmltoblob7.testcase \
	xmltoblob8.testcase \
	xmltoblob9.testcase \
	xmluncompress1.testcase \
	xmluncompress2.testcase \
	xmluncompress3.testcase \
	xmluncompress4.testcase \
	xmluncompress5.testcase \
	xmluncompress6.testcase \
	xmluncompress7.testcase \
	xmluncompress8.testcase 
