
EXTRA_DIST = importzipdbf1.testcase \
	importzipdbf2.testcase \
	importzipdbf3.testcase \
	importzipdbf4.testcase \
	importzipdbf5.testcase \
	importzipdbf6.testcase \
	importzipdbf7.testcase \
	importzipdbf8.testcase \
	importzipdbf9.testcase \
	importzipdbf10.testcase \
	importzipdbf11.testcase \
	importzipdbf12.testcase \
	importzipdbf13.testcase \
	importzipdbf14.testcase \
	importzipdbf15.testcase \
	importzipshp1.testcase \
	importzipshp2.testcase \
	importzipshp3.testcase \
	importzipshp4.testcase \
	importzipshp5.testcase \
	importzipshp6.testcase \
	importzipshp7.testcase \
	importzipshp8.testcase \
	importzipshp9.testcase \
	importzipshp10.testcase \
	importzipshp11.testcase \
	importzipshp12.testcase \
	importzipshp13.testcase \
	importzipshp14.testcase \
	importzipshp15.testcase \
	importzipshp16.testcase \
	importzipshp17.testcase \
	importzipshp18.testcase \
	importzipshp19.testcase \
	importzipshp20.testcase \
	importzipshp21.testcase \
	importzipshp22.testcase \
	importzipshp23.testcase \
	importzipshp24.testcase \
	importzipshp25.testcase \
	importzipshp26.testcase \
	zipnumdbf1.testcase \
	zipnumdbf2.testcase \
	zipnumdbf3.testcase \
	zipnumdbf4.testcase \
	zipnumdbf5.testcase \
	zipnumdbf6.testcase \
	zipnumshp1.testcase \
	zipnumshp2.testcase \
	zipnumshp3.testcase \
	zipnumshp4.testcase \
	zipnumshp5.testcase \
	zipnumshp6.testcase \
	zipdbfn1.testcase \
	zipdbfn2.testcase \
	zipdbfn3.testcase \
	zipdbfn4.testcase \
	zipdbfn5.testcase \
	zipdbfn6.testcase \
	zipdbfn7.testcase \
	zipdbfn8.testcase \
	zipdbfn9.testcase \
	zipdbfn10.testcase \
	zipdbfn11.testcase \
	zipshpn1.testcase \
	zipshpn2.testcase \
	zipshpn3.testcase \
	zipshpn4.testcase \
	zipshpn5.testcase \
	zipshpn6.testcase \
	zipshpn7.testcase \
	zipshpn8.testcase \
	zipshpn9.testcase \
	zipshpn10.testcase \
	zipshpn11.testcase
