
EXTRA_DIST = zipguessshp1.testcase \
	zipguessshp2.testcase \
	zipguessshp3.testcase \
	zipguessshp4.testcase \
	zipguessshp5.testcase \
	zipguessshp6.testcase \
	zipguessshp7.testcase \
	zipguessshp8.testcase \
	zipguessshp9.testcase \
	zipguessshp10.testcase \
	zipguessshp11.testcase \
	zipguessshp12.testcase
